<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_task">Add Task</string>
    <string name="app_name">To-Do App</string>
    <string name="list_item">List Item</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="new_task">New task</string>
    <string name="add_details">Add details</string>
    <string name="type_details">Type Details</string>
    <string name="save">Save</string>
    <string name="successfully_added">"Task successfully added "</string>
    <string name="my_list">My List</string>
    <string name="completed">Completed</string>
    <string name="completed_count">Completed (%d)</string>
    <string name="open_completed_container">open completed container</string>
    <string name="create_new_list">Create new list</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="options">Options</string>
    <string name="sort_by">Sort by</string>
    <string name="my_order">My Order</string>
    <string name="delete_list">Delete list</string>
    <string name="default_list">Default list can\'t be deleted</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_all_completed_tasks">Delete all completed tasks?</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="enter_list_title">List title</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="task_title">Enter Title</string>
    <string name="task_description">Add Details</string>
    <string name="send_email_title">Email Chooser</string>
    <string name="add_date_time">Add date/time</string>
    <string name="add_sub_task">Add sub tasks</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="delete_message">%d completed task will be permanently removed unless it repeats</string>
    <string name="clear_text">Clear Text</string>
    <string name="move_task_to">Move task to</string>
    <string name="empty"> </string>
    <string name="selected_item">Selected item</string>
    <string name="delete_this_list">Delete this list?</string>
    <string name="delete_list_message">Deleting this list will also delete %d task.</string>
    <string name="text_delete">Delete</string>
    <string name="choose_theme">Choose theme</string>
    <string name="dark">Dark</string>
    <string name="set_by_battery_saver">Set by Battery Saver</string>
    <string name="system_default">System default</string>
</resources>