<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.nkuppan.todo.ui.viewmodel.SettingViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="20dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:background="@drawable/ic_dragger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:onClick="@{() -> viewModel.openSortOptionMenu()}"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_24dp"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_24dp"
                android:paddingBottom="@dimen/margin_16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/sort_by"
                    android:textColor="?colorOnSurface" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_order" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:gravity="center_vertical"
                android:onClick="@{() -> viewModel.onRenameListClick()}"
                android:paddingStart="@dimen/margin_24dp"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_24dp"
                android:paddingBottom="@dimen/margin_16dp"
                android:text="@string/rename_list"
                android:textColor="?colorOnSurface" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:onClick="@{() -> viewModel.deleteThisTaskGroupClick()}"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_24dp"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_24dp"
                android:paddingBottom="@dimen/margin_16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.isDefaultList}"
                    android:gravity="center_vertical"
                    android:text="@string/delete_list"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:enabled="@{!viewModel.isDefaultList}"
                    android:gravity="center_vertical"
                    android:text="@string/default_list"
                    android:textColor="@color/text_color"
                    android:visibility="@{viewModel.isDefaultList ? View.VISIBLE : View.GONE}" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:enabled="@{viewModel.isCompletedAvailable}"
                android:gravity="center_vertical"
                android:onClick="@{() -> viewModel.deleteAllCompletedTaskClick()}"
                android:paddingStart="@dimen/margin_24dp"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_24dp"
                android:paddingBottom="@dimen/margin_16dp"
                android:text="@string/delete_all_completed_tasks"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:onClick="@{() -> viewModel.onThemeSelectClick()}"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_24dp"
                android:paddingTop="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_24dp"
                android:paddingBottom="@dimen/margin_16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/theme"
                    android:textColor="?colorOnSurface" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:gravity="center_vertical"
                    android:text="@string/light" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_light" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>