<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.nkuppan.todo.ui.viewmodel.TaskCreateViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_task_edit"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title=" " />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/task_group_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:drawablePadding="@dimen/margin_16dp"
                    android:enabled="@{!viewModel.taskCompleted}"
                    android:onClick="@{() -> viewModel.changeTaskGroup()}"
                    android:padding="@dimen/margin_8dp"
                    android:text="@string/my_list"
                    android:textColor="@color/action_text_color"
                    android:textSize="@dimen/text_size_16sp"
                    app:drawableEndCompat="@drawable/ic_arrow_down"
                    app:drawableTint="@color/action_text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=" "
                    android:background="@android:color/transparent"
                    android:enabled="@{!viewModel.taskCompleted}"
                    android:hint="@string/task_title"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="@dimen/margin_16dp"
                    android:text="@={viewModel.title}"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_group_list"
                    app:setStrike="@{viewModel.taskCompleted}" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=" "
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="@dimen/margin_16dp"
                    android:enabled="@{!viewModel.taskCompleted}"
                    android:hint="@string/task_description"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="3"
                    android:maxLines="3"
                    android:minLines="3"
                    android:padding="@dimen/margin_16dp"
                    android:text="@={viewModel.description}"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_title"
                    app:setStrike="@{viewModel.taskCompleted}" />

                <TextView
                    android:id="@+id/task_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/listChoiceBackgroundIndicator"
                    android:drawablePadding="@dimen/margin_16dp"
                    android:enabled="@{!viewModel.taskCompleted}"
                    android:gravity="center_vertical"
                    android:onClick="@{()->viewModel.selectDateTimeClick()}"
                    android:padding="@dimen/margin_16dp"
                    android:text="@{viewModel.taskEndDateString}"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_16sp"
                    app:drawableStartCompat="@drawable/ic_calendar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="@{!viewModel.taskCompleted ? View.VISIBLE : View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_date_time">

                    <ImageView
                        android:id="@+id/sub_task_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:contentDescription="@string/add_sub_task"
                        android:padding="@dimen/margin_16dp"
                        android:src="@drawable/ic_sub_task" />

                    <LinearLayout
                        android:id="@+id/sub_task_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>